--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "contentful": "^9.3.3",
+    "firebase": "^9.17.1",
     "marked": "^4.2.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
